--- a/_posts/2023-10-04-third-anniversary-update/third-anniversary-update.Rmd
+++ b/_posts/2023-10-04-third-anniversary-update/third-anniversary-update.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Third anniversary update"
 description: |
-  A short description of the post.
+  Third anniversary update with graphs!
 author:
   - name: Nicholas
     url: {}
