--- a/_posts/2023-11-11-sabah-oct-2023/sabah-oct-2023.Rmd
+++ b/_posts/2023-11-11-sabah-oct-2023/sabah-oct-2023.Rmd
@@ -11,7 +11,7 @@ output:
     toc: true
     toc_float: true
     toc_depth: 3
-preview: img/egg.jpg
+preview: img/egg.JPG
 ---
 
 
@@ -196,7 +196,7 @@ For the last day in KK, we left the hotel at 8am for the 40min drive to Kokol Ha
 
 It was skittish to flash but stayed around long enough for everyone to get some shots. Along the trail, a confiding, small caerulean was perched on some grass. It turned out to be the endemic *Jamides lugine* which has a distinctive purple upperside! Due to the approaching dark clouds, we headed to the restaurant for a relaxing two-hour lunch. Once the rain ended, we decided to check out the nearby Ulu Kionsom waterfall (10rm entrance fee). With the overcast weather and the crowd of picnickers, it was not very productive. I managed to shoot one of my targets, the Malayan Jungle Glory (*Thaumantis odana*) after the flight of stairs. We headed back early as there wasn’t much butterfly activity in those conditions. 
 
-![Jamides lugine!](img/lugine.jpg) 
+![Jamides lugine!](img/lugine.JPG) 
 
 ### Part 2 Tambunan (12-15 Oct)
 The room was basic but clean and seems to have been much improved from the last time Ash stayed here. The tap water was mostly alright and there was a heater water for showers. It gets quite cold at night; I slept in my raincoat, socks and two blankets with the fan turned off. The lodge’s porch lights also attracted a number of interesting bugs (moths, Megaloptera, Neuroptera, Trichoptera). Food was flexible, tasty, cheap and fruity. Each meal was around 60-70rm for four people. The only downside is that there isn't phone reception there.
@@ -238,7 +238,7 @@ Mostly cloudy-overcast
 
 We set off from KK at 0730hrs to Malungung Control Post.  It is a 2.5hr journey by car depending on the traffic and we arrived around 10am. We shot a Green Awl (*Hasora salanga*) and some other butterflies around the station before entering the trail. Along the river opposite the ranger station, there were some puddlers already there including a male Silver Royal (*Ancema blanka*). We placed some bait and a Banded Angle (*Odontoptilum pygela*) immediately joined in. There were the typical hedge blues and Prosotas in small numbers. Near the start of the trail, we spotted a confiding Eyed Cyclops (*Erites argentina*) and a Broad Striped Faun (*Faunis kirata*), both lifers for me. We then went further in and crossed the river two more times (three times total) but did not spot much butterflies along the way and turned back. On the way out, Lee spotted a Banded Bushbrown (*Mycalesis maianeas*) and a Bornean Oakleaf (*Kallima buxtoni*). We decided to head to Mahua as activity was getting a little quiet. Just after the shelter, Chan spotted a Silky Owl (*Taenaris horsfieldii*) perched high but open. After securing some record shots, we scrambled up the sides of the slope to get eye-level shots!
 
-![The Silky Owl. One of my favourite butterfly from this trip.](img/egg.jpg) 
+![The Silky Owl. One of my favourite butterfly from this trip.](img/egg.JPG) 
 
 After the excitement of the Silky Owl, it turned out that the driver had gone out for lunch. While waiting for him to return, I explored a path near the entrance which we had skipped earlier. Around 50m from the entrance, an Allotinus landed near me. I got a couple of record shots and suspecting that it was *A. brooksi*, went to call the others. We went back in search of it but it had flown off and settled with a Rounded Mottle (*Logania regina*) as a consolation prize. The driver returned soon after and we headed to Mahua which was an hour’s drive away. After resupplying in town, we arrived at Mahua at 4pm. 
 
@@ -263,7 +263,7 @@ Morning sunny, afternoon rainy and foggy.
 
 This morning, I went for improvement shots of M. pitana. Chan spotted a torn *Simiskina pharyge*, the first for the trip. A Kinabalu Swordtail and Banded Angle were puddling at platform, and I mainly tried for openwing shots of the Swordtail. Along the trail to the waterfall, we spotted a male Ninja sunning but otherwise the trail was quiet. At the platform, two friendly Borneo Birdwings were puddling (*Troides andromache*). We soon went for lunch when it started drizzling. The Kinabalu Swordtail was still at the platform even in the rain. As the weather was worsening, the others went back to rest while I explored the road back towards the kampung. I also gave up at 1600hrs and went back to do some IDing. 
 
-![A puddling Borneo Birdwing.](img/troid.jpg)
+![A puddling Borneo Birdwing.](img/troid.JPG)
 
 #### Day 7: Mahua - Flight home
 Mostly sunny-cloudy
@@ -311,7 +311,7 @@ obs3[,c(1:9)] %>%
 
 ### Thoughts:
 Thanks, Ash, for organizing the trip and logistics! Please find him to organize such trips! 
-Overall, the abundance of butterflies on this trip was really quite low. The frequent afternoon rains did not help  and several afternoons were wasted. Despite baiting, aggregations did not form and most bait sites had <10 of butterflies at a time. The interior of the forests was also quiet as well. However, I got 115 species which is decent. October is probably the offseason for butterflying in Sabah and should be better in the dryer months. I didn’t manage to see couple of butterflies I wanted such as Stibochiona schoenbergi and the Bornean Sapphire (Heliophorus kiana). However, we did get some rare butterflies so it was still a good trip. My highlights were 1) the eye-level shot of the Silky Owl 2) Pirdana albicornis 3) Arhopala kinabala 4) Jamides lugine and the Allotinuses.
+Overall, the abundance of butterflies on this trip was really quite low. The frequent afternoon rains did not help  and several afternoons were wasted. Despite baiting, aggregations did not form and most bait sites had <10 of butterflies at a time. The interior of the forests was also quiet as well. However, I got 115 species which is decent. October is probably the offseason for butterflying in Sabah and should be better in the dryer months. I didn’t manage to see couple of butterflies I wanted such as Stibochiona schoenbergi and the Bornean Sapphire (Heliophorus kiana). However, we did get some rare butterflies so it was still a good trip. My highlights were 1) the eye-level shot of the Silky Owl 2) *Pirdana albicornis* 3) *Arhopala kinabala* 4) *Jamides lugine* and the Allotinuses.
 
 Next up should be a casual trip to Sri Lanka in November.
 
