--- a/_posts/2024-02-12-sri-lanka-nov-2023/sri-lanka-nov-2023.Rmd
+++ b/_posts/2024-02-12-sri-lanka-nov-2023/sri-lanka-nov-2023.Rmd
@@ -40,7 +40,7 @@ In terms of butterflying, the forest was very quiet with some Clippers, a Comman
 
 After the guided walk, I had some time to explore the area near the entrance and village which was decent. The endemic *Eurema cf. ormistoni* and *Celaenorrhinus spilothyrus* were both shot there. Other butterflies include the  Angled Pierrot (*Caleta decida*) and the White Four Ring (*Ypthima ceylonica*). 
 
-![Celaenorrhinus spilothyrus, the Sri Lankan Black Flat was spotted along the path to the park entrance.](img/flat.jpg) 
+![Celaenorrhinus spilothyrus, the Sri Lankan Black Flat was spotted along the path to the park entrance.](img/flat.jpg?display=inline-block) 
 
 The next morning, we went for a guided walk around the village for birds and managed to get a few endemics. But the main site of interest was the accommodations which had a flowering Elaeocarpus sp. It attracted many Common Jezebels (*Delias eucharis*) and two endemic Ceylon Tree Nymphs (*Idea iasonia*). The rest of the gardens attracted some tigers (*Ideopsis* and *Parantica*) as well as the Blue Mormon (now a subsp. of *Papilio agenor*). 
 
