--- a/_posts/2024-05-23-japan-taiwan-2024/japan-taiwan-2024.Rmd
+++ b/_posts/2024-05-23-japan-taiwan-2024/japan-taiwan-2024.Rmd
@@ -111,7 +111,7 @@ The weather during the trip was not great and most of the butterflies only appea
 
 ![The book!](img/book.jpeg)
 
-![At least I saw a Tanuki.](img/Tanuki.JPG)
+![At least I saw a Tanuki in Enoshima.](img/Tanuki.jpg)
 
 ## Taiwan May 2024 Butterfly trip report
 
