--- a/_posts/2025-06-13-japan-kyushu-and-kanto-2025/japan-kyushu-and-kanto-2025.Rmd
+++ b/_posts/2025-06-13-japan-kyushu-and-kanto-2025/japan-kyushu-and-kanto-2025.Rmd
@@ -117,6 +117,8 @@ For the second trip, it was a rather impulsive trip since I had some time (booke
 Weather: Rather cloudy   
 I did not have much time to butterfly during the Kyushu 2025 trip due to the weather and low activity other than some time at Yakushima. There was a morning at Manamiosumi with strong sunshine but the only thing I spotted outside the accommodations were pale grass blues. The main chance I had was a visit to the Hachimanju Tea Shop in Yakushima. I had about 45 mins to explore the area while my family drank tea in the plantation. It was semi residential so there were some flowers to attract butterflies. The only notable one for me was an Alpine Black Swallowtail (*Papilio mackii*). We spent the rest of the day exploring the rest of the island.
 
+![The Alpine Black Swallowtail](img/mackii.jpg)
+
 ### Kanto 2025 (5th - 12th June 2025)
 #### Day 1 Arrival and Takasaki
 Weather: Sunny
